Atualizando os conteúdos

--- a/referencias.bib
+++ b/referencias.bib
@@ -1,11 +1,12 @@
-@book{wickham2016r4ds,
-  title={R for Data Science},
-  author={Wickham, Hadley and Grolemund, Garrett},
-  year={2016},
-  publisher={O’Reilly Media},
-  address={Sebastopol}
+@book{wickham23,
+  title = {R for Data Science: Import, Tidy, Transform, Visualize, and Model Data},
+  author = {W. Hadley; Grolemund, G.; Çetinkaya-Rundel, M.},
+  year = {2023},
+  edition = {2},
+  publisher = {O’Reilly Media},
+  isbn = {9781492097402},
+  url = {https://r4ds.hadley.nz/}
 }
-
 
 @article{hornik89,
   title={Multilayer feedforward networks are universal approximators},
@@ -15,4 +16,97 @@
   number={5},
   pages={359--366},
   year={1989}
+}
+
+@article{ArthurSamuel59,
+  author={Samuel, A. L.},
+  journal={IBM Journal of Research and Development}, 
+  title={Some Studies in Machine Learning Using the Game of Checkers}, 
+  year={1959},
+  volume={3},
+  number={3},
+  pages={210-229},
+  keywords={},
+  doi={10.1147/rd.33.0210},
+  url = {https://ieeexplore.ieee.org/document/5392560}
+  }
+  
+@article{bergstra12,
+  title={Random search for hyper-parameter optimization},
+  author={Bergstra, J.; Bengio, Y.},
+  journal={Journal of Machine Learning Research},
+  volume={13},
+  pages={281--305},
+  year={2012},
+  url = {https://jmlr.org/papers/volume13/bergstra12a/bergstra12a.pdf}
+}
+
+@article{breiman01,
+  title={Random forests},
+  author={Breiman, L.},
+  journal={Machine Learning},
+  volume={45},
+  number={1},
+  pages={5--32},
+  year={2001},
+  publisher={Springer},
+  url = {https://link.springer.com/article/10.1023/A:1010933404324}
+}
+
+@article{cover67,
+  title={Nearest neighbor pattern classification},
+  author={Cover, Thomas and Hart, Peter},
+  journal={IEEE Transactions on Information Theory},
+  volume={13},
+  number={1},
+  pages={21--27},
+  year={1967},
+  publisher={IEEE},
+  url = {}
+}
+
+@inproceedings{ioffe15,
+  title={Batch normalization: Accelerating deep network training by reducing internal covariate shift},
+  author={Ioffe, Sergey and Szegedy, Christian},
+  booktitle={Proceedings of the 32nd International Conference on Machine Learning (ICML)},
+  year={2015}
+}  
+
+@book{hastie09,
+  title = {The Elements of Statistical Learning: Data Mining, Inference, and Prediction},
+  author = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+  publisher = {Springer},
+  year = {2009},
+  edition = {2nd},
+  url = {https://www.sas.upenn.edu/~fdiebold/NoHesitations/BookAdvanced.pdf}
+}
+
+@book{kuhn13,
+  title = {Applied Predictive Modeling},
+  author = {Kuhn, Max and Johnson, Kjell},
+  publisher = {Springer},
+  year = {2013},
+  url = {https://vuquangnguyen2016.wordpress.com/wp-content/uploads/2018/03/applied-predictive-modeling-max-kuhn-kjell-johnson_1518.pdf}
+}
+  
+@article{freund97,
+  title = {A decision-theoretic generalization of on-line learning and an application to boosting},
+  author = {Freund, Yoav and Schapire, Robert E},
+  journal = {Journal of Computer and System Sciences},
+  volume = {55},
+  number = {1}, % Muitas vezes é o número 1, mas 55: 119-139 também pode implicar a primeira parte
+  pages = {119--139},
+  year = {1997},
+  publisher = {Elsevier}
+}
+
+@book{Han23,
+  author    = {Han, Jiawei and Kamber, Micheline and Pei, Jian},
+  title     = {Data Mining: Concepts and Techniques},
+  year      = {2023},
+  edition   = {4},
+  publisher = {Elsevier/Morgan Kaufmann},
+  address   = {Cambridge, MA},
+  note      = {Baseado na 3ª Edição, Publicada originalmente em 2011},
+  url       = {https://datamineaz.org/textbooks/hanDataMiningConceptual.pdf}
 }
