Mais uma atualização

--- a/Machine_Learning_A_a_Z.Rmd
+++ b/Machine_Learning_A_a_Z.Rmd
@@ -2,7 +2,7 @@
 title: "Machine Learning de A a Z"
 author:
   - name: "Dr. Fernando Machado Haesbaert"
-    affiliation: "Pesquisador em Ciência de Dados - EMBRAPA Pantanal"
+    affiliation: "Pesquisador em Ciência de Dados"
 title-block-style: default
 title-block-banner: false
 
